[gd_scene load_steps=6 format=3 uid="uid://btdkfe2q4pa82"]

[ext_resource type="Texture2D" uid="uid://bqov6hgma4en1" path="res://Sprites/BG.png" id="1_r150o"]
[ext_resource type="Script" uid="uid://by4gvf2u141on" path="res://Scripts/GameManager.gd" id="1_rgh2o"]
[ext_resource type="Texture2D" uid="uid://bijy3ajptnkm8" path="res://Sprites/Grass.png" id="3_pbw6q"]
[ext_resource type="Texture2D" uid="uid://ddu7wv2dhw8b7" path="res://Sprites/Submarine.png" id="4_v1gob"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jw32o"]
radius = 57.0
height = 188.0

[node name="Main" type="Node2D"]
script = ExtResource("1_rgh2o")

[node name="BackGround" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_r150o")

[node name="Pipe Holder" type="Node2D" parent="."]
position = Vector2(960, 540)

[node name="Ground" type="Area2D" parent="."]
position = Vector2(960, 540)

[node name="Grass" type="Sprite2D" parent="Ground"]
position = Vector2(960, 449)
texture = ExtResource("3_pbw6q")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Ground"]
position = Vector2(960, 449)
polygon = PackedVector2Array(1268, -71, 1268, -69.5, 1256.7, -66, 1253.3999, -66, 1240.5, -58, 1238.3999, -58, 1181, -17, 1181, -16.300003, 1154, -3.300003, 1108, -5, 1101.3999, -5, 1070, -17.400002, 1070, -18.699997, 1048.1001, -22, 1035.1001, -22, 1010.30005, -29, 1002.30005, -29, 926.30005, -52, 911.5, -52, 819, -4.199997, 797, 1.4000015, 797, 2, 730, 4.0999985, 730, 4.9000015, 586, 3, 559.3999, 3, 534.19995, -2, 528.3999, -2, 503.30005, -11, 500.5, -11, 451, -39.2, 451, -40.5, 419, -50.5, 419, -51.6, 371.19995, -62, 347.6001, -62, 314.6001, -50, 312.30005, -50, 302.30005, -42, 300, -42, 289, -27.699997, 230, 1.800003, 230, 2.5, 206, 10.599998, 206, 11.199997, 176, 16.300003, 176, 17.099998, 128, 20.099998, 128, 20.800003, 93.099976, 19, 45.099976, 19, 16.199951, 12, -11.599976, 12, -50, -2.5, -50, -3.699997, -88.80005, -10, -162.40002, -10, -186.40002, 1, -189.59998, 1, -227, 23.900002, -227, 24.5, -252, 33.6, -252, 34.4, -282, 41.399994, -282, 42.100006, -299, 43.100006, -299, 44, -347.69995, 44, -359.69995, 40, -370.59998, 40, -417, 22.5, -417, 21.5, -444.69995, 14, -448.5, 14, -454, 10.800003, -454, 9.5, -486, 0.5, -486, -1, -584.6, -1, -611, 15.900002, -611, 16.5, -641.1, 25, -649.69995, 25, -765, -14.5, -765, -16, -776.69995, -16, -798, -22.5, -798, -24, -826.19995, -24, -868, -14.599998, -868, -14, -890.19995, -14, -913.3, -10, -1008.3, -10, -1058, 4.5, -1067.2, 5, -1117.1, 17, -1152.9, 17, -1167.7, 13, -1233.7, 13, -1271.8, 7, -1308.9, 7, -1342.8, -1, -1366.6, -1, -1399.8, -7, -1403.7, -7, -1436, -20.400002, -1436, -21.599998, -1471.8, -30, -1506.4, -30, -1555.4, -12, -1559.4, -12, -1597, 5.699997, -1597, 6.4000015, -1599.1, 7, -1606.4, 7, -1627, 15.699997, -1627, 16.400002, -1629.1, 17, -1638.3, 17, -1660, 24.599998, -1735.9, 25, -1783.7, 12, -1787.7, 12, -1853, -16.300003, -1853, -18, -1881.4, -18, -1905.3, -8, -1912, -8, -1912, 84, 1912, 84, 1912, -0.5, 1879.8999, 7, 1822.3, 7, 1804, 1.5, 1804, 0.30000305, 1778, -3.800003, 1778, -4.9000015, 1737.1001, -8, 1646.1001, -8, 1605, -17.599998, 1605, -19.099998, 1567, -16.900002, 1567, -16.099998, 1497, -17, 1485.3, -17, 1465.3, -23, 1461.5, -23, 1438, -34.3, 1438, -35.5, 1419, -41.5, 1419, -43, 1407.1001, -43, 1357.3, -56, 1352.3, -56, 1307, -69.5, 1307, -71)

[node name="Player" type="CharacterBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("4_v1gob")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_jw32o")

[connection signal="body_entered" from="Ground" to="." method="_on_ground_body_entered"]
